<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black" >

    <ImageView
        android:id="@+id/logobig"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logobig" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logobig"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_click"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/reg"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/eventButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_click"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/events" />

    <Button
        android:id="@+id/instaFeedButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eventButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_click"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/insta"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/liveBlogButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instaFeedButton"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_click"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/live_blog"
        android:textColor="@color/black" />

</RelativeLayout>