<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sorte"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:ignore="NestedWeights" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/tanay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_no_border"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/tanay_agarwal"
                android:src="@drawable/tanay" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/tanay_agarwal"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/team_leader"
                    android:textSize="20sp"
                    tools:ignore="NestedWeights" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/kartik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tanay"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/card_no_border"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/kartik_arora"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/android_app_developer"
                    android:textSize="20sp"
                    tools:ignore="NestedWeights" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/kartik_arora"
                android:src="@drawable/kartik" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/shubham"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/kartik"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/card_no_border"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:contentDescription="@string/shubham_sorte"
                android:src="@drawable/shubham" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/shubham_sorte"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/ios_app_developer"
                    android:textSize="20sp"
                    tools:ignore="NestedWeights" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/saksham"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shubham"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/card_no_border"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/saksham_khanna"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/windows_phone_app_developer"
                    android:textSize="20sp"
                    tools:ignore="NestedWeights" />
            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:contentDescription="@string/saksham_khanna"
                android:src="@drawable/saksham" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/samarth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/saksham"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/card_no_border"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:contentDescription="@string/samrth_jain"
                android:src="@drawable/samarth" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/samrth_jain"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/ui_ux_graphic_designer"
                    android:textSize="20sp"
                    tools:ignore="NestedWeights" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/amrit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/samarth"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/card_no_border"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/amrit_ayyar"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/backend_developer"
                    android:textSize="20sp"
                    tools:ignore="NestedWeights" />
            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:contentDescription="@string/amrit_ayyar"
                android:src="@drawable/amrit" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vidya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/amrit"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/card_no_border"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin" >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:contentDescription="@string/vidya_sagar"
                android:src="@drawable/vidya" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.7"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/vidya_sagar"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:text="@string/animation_videofx"
                    android:textSize="20sp"
                    tools:ignore="NestedWeights" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>